fix: align textarea placeholder

--- a/src/components/MessageComposer/styling/MessageComposer.scss
+++ b/src/components/MessageComposer/styling/MessageComposer.scss
@@ -180,12 +180,22 @@
       flex: 1;
       display: flex;
       flex-direction: column;
+      min-height: $controls-containers-min-height;
+      justify-content: center;
       gap: var(--spacing-sm);
+
+      .str-chat__message-composer-controls__text-composition-controls__command-chip-container {
+        height: 100%;
+        display: flex;
+        align-items: flex-end;
+      }
     }
 
     .str-chat__message-composer-controls__text-composition-controls__text {
-      display: flex;
-      align-items: end;
+      display: grid;
+      grid-template-columns: auto minmax(0, 1fr);
+      align-items: center;
+      width: 100%;
       gap: var(--spacing-xxs);
     }
 
@@ -210,10 +220,10 @@
 
     .str-chat__textarea {
       flex: 1;
+      min-width: 0;
       position: relative;
       display: flex;
       align-items: center;
-      margin-inline: var(--spacing-xxs) var(--spacing-xs);
 
       textarea {
         @include utils.component-layer-overrides('message-textarea');
